# omicron-wiki

./: .gitignore  Cargo.toml  README.md  changelog.md
assets/templates/: base.tera
crates/omicron/: Cargo.toml
crates/omicron-core/: Cargo.toml
crates/omicron-core/src/: app.rs
crates/omicron-db/: Cargo.toml
crates/omicron-db/migrations/: 0001_create_users_table.up.sql
crates/omicron-db/src/: db.rs  error.rs  lib.rs
crates/omicron-db/src/models/: user.rs
crates/omicron/src/: app.rs  asset.rs  core.rs  db.rs  error.rs  lib.rs  main.rs  render.rs  router.rs
crates/omicron/src/controllers/: asset.rs  mod.rs
crates/omicron/src/controllers/wiki/: mod.rs  page.rs
