[package]
name = "omicron-db"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "derive",
    "postgres",
] }

omicron-core = { path = "../omicron-core" }
