[package]
name = "omicron"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
dotenvy = "0.15.7"
tokio = { version = "1.45.1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
] }
axum = { version = "0.8.4", default-features = false, features = [
    "macros",
    "tokio",
    "http1",
    "query",
] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["normalize-path"] }
