[package]
name = "omicron"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dotenvy = "0.15.7"
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "clock",
] }
tokio = { version = "1.45.1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
] }
axum = { version = "0.8.4", default-features = false, features = [
    "macros",
    "tokio",
    "http1",
    "query",
] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["normalize-path"] }
tera = "1.20.0"

omicron-core = { path = "../omicron-core" }
omicron-db = { path = "../omicron-db" }
